# terraform-aws-sns-cloudwatch-logs

./: .gitignore  .gitmodules  .terraform-docs.yml  .trufflehog  .trufflehog.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README-inspec.md  README.md  attributes.yml  build_layer.sh  cloudwatch.tf  data.tf  function.tf  iam.tf  inspec.yml  kms.tf  layer.tf  locals.tf  main.tf  outputs.tf  release-please-config.json  sns.tf  variables.tf  versions.tf  warmer.tf
.github/: pr-title-checker-config.json
.github/workflows/: ci.yml  pr-title.yml  release.yaml  terraform.yml
controls/: sns_cloudwatch_logs.rb
function/: README.md  pyproject.toml  sns_cloudwatch_gw.py
function/tests/: conftest.py  test_sns_cloudwatch_gw.py
