[tool.poetry]
name = "lambda-sns-cloudwatch-logs"
version = "0.0.0"
description = ""
authors = ["Jason McVetta <jmcvetta@hey.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "lambda_sns_cloudwatch_logs"}]

[tool.poetry.dependencies]
python = "^3.8"
watchtower = "^3.0.1"
structlog = "^23.1.0"
environs = "^9.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.12.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
