[project]
name = "lambda-sns-cloudwatch-logs"
version = "0.0.0"
description = ""
authors = [{name = "Jason McVetta", email = "jmcvetta@hey.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "watchtower>=3.0.1",
    "structlog>=23.1.0",
    "environs>=9.5.0",
    "pytz>=2023.3",
    "marshmallow<4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "ipython>=8.12.0",
    "mypy>=1.2.0",
    "pytest>=7.3.1",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "moto>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "*.tox/*", ".venv/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "types-pytz>=2025.2.0.20250516",
]
